--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -166,7 +166,6 @@ export class InfluencerSummary extends LitElement {
   }
   
   render() {
-    const height = this.height ?? 64;
     //<link rel="preload" href="https://tradeaudit.app/assets/finance.svg" as="image" />
     return html`
        ${halfmoonCssTag}
@@ -179,46 +178,95 @@ export class InfluencerSummary extends LitElement {
                 const negativePercent = ratedPercent == 0 ? 0 : subItem.negativePercent / ratedPercent;
                 const tradeCount = subItem === undefined ? 0 : subItem.count;
                 const a = this.profileLink(item);
-                
-                return html`
-                <li class="list-group-item" style="display:flex;align-items:center;">
-                  ${a}<div style="width:60px">${this.profileTypeImage(item)}</div><img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>${a != null ? html`</a>` : null}
-                  <div style="flex-grow:1;padding-left:12px;">
-                    <div style="display:flex;">
-                      <div style="text-align:left">
-                        <h5 class="card-title">${this.profileTitle(item)}</h5>
+
+                if (screen.availWidth < 800) {
+                  const height = 50;
+                  return html`
+                  <li class="list-group-item">
+                    <div style="display:flex;align-items:center;">
+                      ${a}
+                        <img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;">
+                        <div style="width:40px">${this.profileTypeImage(item)}</div>
+                      ${a != null ? html`</a>` : null}
+                      <div style="flex-grow:1;padding-left:12px;">
+                        <div style="display:flex;">
+                          <div style="text-align:left">
+                            <h5 class="card-title">${this.profileTitle(item)}</h5>
+                          </div>
+                          <div style="flex-grow:1" class="card-text text-end" style="font-weight:bold">
+                            ${tradeCount} Trade${tradeCount == 1 ? '' : 's'}
+                          </div>
+                        </div>
+                        <div style="display:flex">
+                          <div style="text-align:left">
+                            ${this.profileMeta(item.meta)}
+                          </div>
+                        </div>
                       </div>
-                      <div style="flex-grow:1" class="card-text text-end" style="font-weight:bold">
-                        ${tradeCount} Trade${tradeCount == 1 ? '' : 's'}
+                      ${
+                        (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/influencer?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
+                            <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
+                        </a>` : html`<div style="width:60px"></div>`
+                      }
+                      <pie-chart size="${height}" positive="${positivePercent}" negative="${negativePercent}"></pie-chart>
+                    </div>
+                    <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
+                      ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}<br/>
+                      ${item.stocks.map(
+                          (stock) => {
+                              const selected = this.selectedStockItem != null &&
+                                    this.selectedStockItem.symbol == stock.symbol ? "btn-secondary active" : "btn-outline-secondary";
+                              return html`<button
+                                type="button" style="padding:0 10px 0 10px;margin-left:4px;"
+                                @click=${() => this.selectStockEvent(stock) }
+                                class="btn ${selected} btn-sm"
+                              >${stock.symbol}</button>`
+                          }
+                      )}
+                    </div>
+                  </li>`
+                } else {
+                  const height = this.height ?? 64;
+                  return html`
+                  <li class="list-group-item" style="display:flex;align-items:center;">
+                    ${a}<div style="width:60px">${this.profileTypeImage(item)}</div><img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>${a != null ? html`</a>` : null}
+                    <div style="flex-grow:1;padding-left:12px;">
+                      <div style="display:flex;">
+                        <div style="text-align:left">
+                          <h5 class="card-title">${this.profileTitle(item)}</h5>
+                        </div>
+                        <div style="flex-grow:1" class="card-text text-end" style="font-weight:bold">
+                          ${tradeCount} Trade${tradeCount == 1 ? '' : 's'}
+                        </div>
+                      </div>
+                      <div style="display:flex">
+                        <div style="text-align:left">
+                          ${this.profileMeta(item.meta)}
+                        </div>
+                        <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
+                          ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}<br/>
+                          ${item.stocks.map(
+                              (stock) => {
+                                  const selected = this.selectedStockItem != null &&
+                                        this.selectedStockItem.symbol == stock.symbol ? "btn-secondary active" : "btn-outline-secondary";
+                                  return html`<button
+                                    type="button" style="padding:0 10px 0 10px;margin-left:4px;"
+                                    @click=${() => this.selectStockEvent(stock) }
+                                    class="btn ${selected} btn-sm"
+                                  >${stock.symbol}</button>`
+                              }
+                          )}
+                        </div>
                       </div>
                     </div>
-                    <div style="display:flex">
-                      <div style="text-align:left">
-                        ${this.profileMeta(item.meta)}
-                      </div>
-                      <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
-                        ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}<br/>
-                        ${item.stocks.map(
-                            (stock) => {
-                                const selected = this.selectedStockItem != null && 
-                                      this.selectedStockItem.symbol == stock.symbol ? "btn-secondary active" : "btn-outline-secondary";
-                                return html`<button 
-                                  type="button" style="padding:0 10px 0 10px;margin-left:4px;" 
-                                  @click=${() => this.selectStockEvent(stock) }
-                                  class="btn ${selected} btn-sm"
-                                >${stock.symbol}</button>`
-                            }
-                        )}
-                      </div>
-                    </div>
-                  </div>
-                  ${
-                    (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/influencer?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
-                        <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
-                    </a>` : html`<div style="width:60px"></div>`
-                  }
-                  <pie-chart size="${height}" positive="${positivePercent}" negative="${negativePercent}"></pie-chart>
-                </li>`
+                    ${
+                      (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/influencer?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
+                          <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
+                      </a>` : html`<div style="width:60px"></div>`
+                    }
+                    <pie-chart size="${height}" positive="${positivePercent}" negative="${negativePercent}"></pie-chart>
+                  </li>`
+                }
               }
             )}
         </ul>
