--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -184,33 +184,28 @@ export class InfluencerSummary extends LitElement {
                   const height = 50;
                   return html`
                   <li class="list-group-item">
-                    <div style="display:flex;align-items:center;">
+                    <div style="display:flex;">
                       <img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;">
                       <div style="flex-grow:1;padding-left:12px;">
                         <div style="display:flex;">
                           <div style="text-align:left">
                             <h5 class="card-title">${this.profileTitle(item)}</h5>
                           </div>
-                          <div class="card-text text-end" style="display:inline-block;flex-grow:1;font-weight:bold">
+                          <div class="card-text text-end" style="flex-grow:1;font-weight:bold">
                             ${tradeCount} Trade${tradeCount == 1 ? '' : 's'}<br>
-                            ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}
                           </div>
                         </div>
                         <div style="display:flex">
                           <div style="text-align:left">
                             ${this.profileMeta(item.meta)}
                           </div>
+                          ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}
                         </div>
                       </div>
-                      ${
-                        (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/influencer?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
-                            <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
-                        </a>` : html`<div style="width:60px"></div>`
-                      }
                     </div>
                     <div>
                       ${a}${this.profileTypeImage(item)}${a != null ? html`</a>` : null}
-                      <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
+                      <div style="display:inline-block;flex-grow:1;line-height:1.3;" class="card-text text-end">
                         ${item.stocks.map(
                             (stock) => {
                                 const selected = this.selectedStockItem != null &&
