--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -183,10 +183,11 @@ export class InfluencerSummary extends LitElement {
 
                 if (screen.availWidth < 800) {
                   const height = 50;
+                  const pieChart = (ratedPercent == 0) ? null : html`<pie-chart size=$height positive=$positivePercent negative=$negativePercent></pie-chart>`;
                   return html`
                   <li class="list-group-item" style="padding:6px">
                     <div style="display:flex;align-items: center;">
-                      <img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;margin-right:10px;">
+                      <img src=${item.profileUrl} style="width:${height}px;height:${height}px;border-radius:50%;margin-right:10px;">
                       <div>
                         <h5 class="card-title">${this.profileTitle(item)}</h5>
                         ${this.profileMeta(item.meta)}
@@ -198,7 +199,7 @@ export class InfluencerSummary extends LitElement {
                         ${tradeCount} Trade${tradeCount == 1 ? '' : 's'}<br>
                         ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}
                       </div>
-                      <pie-chart size="${height}" positive="${positivePercent}" negative="${negativePercent}"></pie-chart>
+                      ${pieChart}
                     </div>
                     <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
                       ${item.stocks.map(
