--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -183,7 +183,7 @@ export class InfluencerSummary extends LitElement {
                 if (screen.availWidth < 800) {
                   const height = 50;
                   return html`
-                  <li class="list-group-item" style="padding:6px">
+                  <li class="list-group-item" style="padding:6px;background-color:antiquewhite;">
                     <div style="display:flex;align-items: center;">
                       <img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;margin-right:10px;">
                       <div>
