--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -113,6 +113,12 @@ export class InfluencerSummary extends LitElement {
       border-color: #6c757d;
       --bs-btn-color: #fff;
     }
+    .list-group-item {
+        background-color: antiquewhite;
+    }
+    .btn-outline-secondary {
+        background-color: white;
+    }
   `;
   
   static isProtected = html`<img src="https://tradeaudit.app/assets/OOjs_UI_icon_lock.svg" width="18" height="18" style="margin-bottom: 4pt" alt="Protected">`;
