--- a/_pages/index.html
+++ b/_pages/index.html
@@ -29,7 +29,7 @@ title: "Trade Audit App for Social Media"
 </div>
 
 <div class="mb-5 text-center">
-  <h4 class="mb-3">Import Recommendations Made on Social Media,<br>and Track Trade Performance.</h4>
+  <h4 class="mb-3">Import recommendations made on Social Media, and track trade performance.</h4>
   {% assign integrations = site.navigation | where: "key", "integrations" | first %}
   {% for navitem in integrations.links %}
   <a
