--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -6,7 +6,7 @@ title: "Trade Audit Influencer Rankings"
 <h1 class="display-6 fw-bold text-center">Influencer Rankings</h1>
 
 <span class="lead mb-4 text-center">
-  Add your own favorite social media influencers using the Trade Audit mobile app for Android.
+  Track your favorite social media influencers using the Trade Audit mobile app for Android.
 </span>
 
 <script type="module">
