--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -319,7 +319,7 @@ export class StockToolbar extends LitElement {
         this.requestUpdate();
       }
     });
-    
+    /*
     // Making our request
     fetch(url, { method: 'GET' })
         .then(Result => Result.json())
@@ -329,7 +329,7 @@ export class StockToolbar extends LitElement {
             this.requestUpdate();
         })
     .catch(errorMsg => { console.log(errorMsg); });
-
+*/
     this.toggleSelected(null);
   }
   
@@ -471,7 +471,7 @@ export class StockToolbar extends LitElement {
     return html`<div
       style="
         width: 50%;
-        height: 38px;
+        height: 1.5rem;
         margin: auto;
         display: block;
       "
@@ -537,7 +537,6 @@ export class StockToolbar extends LitElement {
   }
   
   fetchInfluencers(){
-    /*
     const symbol = this.selectedStockItem == null ? '' : '/' + this.selectedStockItem.symbol;
     const url = 'https://cf.tradeaudit.app/influencers/' + (this.isTop ? 'top' : 'bottom') + symbol;
 
@@ -553,7 +552,6 @@ export class StockToolbar extends LitElement {
       this.influencers = [];
       this.requestUpdate();
     });
-    */
   }
 }
 customElements.define('stock-toolbar', StockToolbar);
